Code un peu plus propre (Beautify)

--- a/projets.html
+++ b/projets.html
@@ -5,162 +5,158 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Projets</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Projets</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Emilie Mélodia Saverna</a></h1>
-						<nav id="nav">
+<body>
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Emilie Mélodia Saverna</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Accueil</a></li>
-											<li><a href="cv.html">Curriculum</a></li>
-											<li><a href="projets.html">Projets</a></li>
-										</ul>
-									</div>
-								</li>
+								<li><a href="index.html">Accueil</a></li>
+								<li><a href="cv.html">Curriculum</a></li>
+								<li><a href="projets.html">Projets</a></li>
 							</ul>
-						</nav>
-					</header>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- Main -->
-					<article id="main">
-						<header>
-							<h2>Projets</h2>
-							<p>Un aperçu des differents projets sur lesquels j'ai pu collaborer ...</p>
-						</header>
-						<section class="wrapper style5">
-							<div class="inner">
+		<!-- Main -->
+		<article id="main">
+			<header>
+				<h2>Projets</h2>
+				<p>Un aperçu des differents projets sur lesquels j'ai pu collaborer ...</p>
+			</header>
+			<section class="wrapper style5">
+				<div class="inner">
 
-								<section>
-									<h4>Interview vidéo</h4>
-									<p>Réalisée en mars 2015 pour Syntec ingénierie</p>
-									<div class="video-container">
-									<iframe width="960" height="565" src="https://www.youtube.com/embed/oND2RyQbFLg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-									</div>
-									<hr />
-								</section>
+					<section>
+						<h4>Interview vidéo</h4>
+						<p>Réalisée en mars 2015 pour Syntec ingénierie</p>
+						<div class="video-container">
+							<iframe width="960" height="565" src="https://www.youtube.com/embed/oND2RyQbFLg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+						</div>
+						<hr />
+					</section>
 
-								<section>
-									<!-- projets -->
-									<p><h4>Hôpital Princesse Grace de Monaco</h4><br>
-										Maitre d'ouvrage : Principauté de Monaco<br>
-										Surface : 85 000 m<sup>2</sup><br>
-										Montant des Travaux : 358 M€ HT<br>
-										Livraison : 2028 (4 phases : Parking, ailes 1 &amp; 2 , aile 3 et aile 4)<br>
-										Equipe de conception :</p>
-									<ul>
-									<li>Architecte : AIA Architecture (agence de Paris)</li>
-									<li>Structure : Tractebel (agence de Monaco)</li>
-									<li>Fluides : AIA Ingénierie (agence de Nantes)</li>
-									<li>Electricité : AIA Ingénierie (agence de Nantes)</li>
-									<li>Economie : AIA Ingénierie (agence de Nantes)</li>
-									<li>Aménagement extérieur : AIA Ingénierie (agence de Nantes)</li>
-									<li>Synthèse technique : AIA Ingénierie (agence de Nantes)</li>
-									</ul>
-									<div class="box alt">
-										<div class="row uniform 50%">
-											<div class="5u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-											<div class="5u"><span class="image fit"><img src="images/pic01.png" alt="" /></span></div>
-											</div>
+					<section>
+						<!-- projets -->
+						<p>
+							<h4>Hôpital Princesse Grace de Monaco</h4><br> Maitre d'ouvrage : Principauté de Monaco<br> Surface : 85 000 m<sup>2</sup><br> Montant des Travaux : 358 M€ HT<br> Livraison : 2028 (4 phases : Parking, ailes 1 &amp; 2 , aile 3 et aile 4)<br> Equipe de conception :</p>
+						<ul>
+							<li>Architecte : AIA Architecture (agence de Paris)</li>
+							<li>Structure : Tractebel (agence de Monaco)</li>
+							<li>Fluides : AIA Ingénierie (agence de Nantes)</li>
+							<li>Electricité : AIA Ingénierie (agence de Nantes)</li>
+							<li>Economie : AIA Ingénierie (agence de Nantes)</li>
+							<li>Aménagement extérieur : AIA Ingénierie (agence de Nantes)</li>
+							<li>Synthèse technique : AIA Ingénierie (agence de Nantes)</li>
+						</ul>
+						<div class="box alt">
+							<div class="row uniform 50%">
+								<div class="5u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+								<div class="5u"><span class="image fit"><img src="images/pic01.png" alt="" /></span></div>
+							</div>
+						</div>
+						<p>Coordination BIM (plomberie, ventilation, chauffage, électricité, aménagement extérieur, synthèse technique ) et support Revit.</p>
+						<br>
+						<!-- projets -->
+						<p>
+							<h4>Extension Aéroport Blagnac de Toulouse </h4><br> Maitre d'ouvrage : Aéroport de Toulouse - Blagnac<br> Surface : 2500 m<sup>2</sup> + 2000 m<sup>2</sup> de restructuration<br> Montant des Travaux : 8 M€ HT<br> Date du chantier : de avril 2017 à mars 2018<br> Equipe de conception : 100% AIA
+							Nantes</p>
+						<div class="box alt">
+							<div class="row uniform 50%">
+								<div class="5u"><span class="image fit"><img src="images/aeroport.jpg" alt="" /></span></div>
+							</div>
+						</div>
+						<p>Management BIM de Chantier et Coordination BIM (architecture,plomberie, ventilation, chauffage, électricité, aménagement extérieur, synthèse technique et architecturale, économie ) et support Revit.
+							<p/>
+							<!-- projets -->
+							<p>
+								<h4>Lycée Nort sur Erdre (44)</h4><br> Maitre d'ouvrage : Région Pays de la Loire<br> Surface : 13 000 m<sup>2</sup> lycée + 690 m<sup>2</sup> logements de fonction<br> Montant des Travaux : 22,6 M€ HT<br> Livraison : rentrée 2019<br> Equipe de conception : 100% AIA Nantes</p>
+							<div class="box alt">
+								<div class="row uniform 100%">
+									<div class="10u"><span class="image fit"><img src="images/lycee.jpg" alt="" /></span></div>
+								</div>
+							</div>
+							<p>Management et Coordination BIM (architecture, plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie, architecture d'intérieur, HQE ) et support Revit.
+								<p/>
+								<!-- projets -->
+								<p>
+									<h4>Nouveau Siège du Crédit Agricole du Mans (72)</h4><br> Maitre d'ouvrage : Crédit Agricole Anjou Maine<br> Surface : 10 000 m<sup>2</sup><br> Montant des Travaux : 22,6 M€ HT<br> Livraison : Décembre 2019<br> Equipe de conception : 100% AIA Nantes</p>
+								<div class="box alt">
+									<div class="row uniform 50%">
+										<div class="5u"><span class="image fit"><img src="images/em_bim1.jpg" alt="" /></span></div>
+										<div class="5u"><span class="image fit"><img src="images/em_bim2.jpg" alt="" /></span></div>
 									</div>
-									<p>Coordination BIM (plomberie, ventilation, chauffage, électricité, aménagement extérieur, synthèse technique ) et support Revit.</p>
-									<br>
+								</div>
+								<p>Coordination BIM (architecture,plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie ) et support Revit du concours à la fin de chantier.
+									<p/>
 									<!-- projets -->
-									<p><h4>Extension Aéroport Blagnac de Toulouse </h4><br>
-									Maitre d'ouvrage : Aéroport de Toulouse - Blagnac<br>
-										Surface : 2500 m<sup>2</sup> + 2000 m<sup>2</sup> de restructuration<br>
-										Montant des Travaux : 8 M€ HT<br>
-										Date du chantier : de avril 2017 à mars 2018<br>
-										Equipe de conception : 100% AIA Nantes</p>
-									<div class="box alt">
-										<div class="row uniform 50%">
-											<div class="5u"><span class="image fit"><img src="images/aeroport.jpg" alt="" /></span></div>
-										</div>
-									</div>
-									<p>Management BIM de Chantier et Coordination BIM (architecture,plomberie, ventilation, chauffage, électricité, aménagement extérieur, synthèse technique et architecturale, économie ) et support Revit.<p/>
-									<!-- projets -->
-									<p><h4>Lycée Nort sur Erdre (44)</h4><br>
-									Maitre d'ouvrage : Région Pays de la Loire<br>
-										Surface : 13 000 m<sup>2</sup> lycée + 690 m<sup>2</sup> logements de fonction<br>
-										Montant des Travaux : 22,6 M€ HT<br>
-										Livraison : rentrée 2019<br>
-										Equipe de conception : 100% AIA Nantes</p>
-									<div class="box alt">
-										<div class="row uniform 100%">
-											<div class="10u"><span class="image fit"><img src="images/lycee.jpg" alt="" /></span></div>
-										</div>
-									</div>
-									<p>Management et Coordination BIM (architecture, plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie, architecture d'intérieur, HQE ) et support Revit.<p/>
-									<!-- projets -->
-									<p><h4>Nouveau Siège du Crédit Agricole du Mans (72)</h4><br>
-									Maitre d'ouvrage : Crédit Agricole Anjou Maine<br>
-										Surface : 10 000 m<sup>2</sup><br>
-										Montant des Travaux : 22,6 M€ HT<br>
-										Livraison : Décembre 2019<br>
-										Equipe de conception : 100% AIA Nantes</p>
-									<div class="box alt">
-										<div class="row uniform 50%">
-											<div class="5u"><span class="image fit"><img src="images/em_bim1.jpg" alt="" /></span></div>
-											<div class="5u"><span class="image fit"><img src="images/em_bim2.jpg" alt="" /></span></div>
-										</div>
-									</div>
-									<p>Coordination BIM (architecture,plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie ) et support Revit du concours à la fin de chantier. <p/>
-									<!-- projets -->
-									<p><h4>Extension du CHU de Saint Brieuc (22) </h4><br>
-									Maitre d'ouvrage : Centre Hospitalier de Saint Brieuc<br>
-										Surface :  5 500 m<sup>2</sup> Extension + 5 500 m<sup>2</sup> réhabilitation<br>
-										Montant des Travaux : 22 M€ HT<br>
-										Début des travaux : Avril 2018<br>
-										Equipe de conception : 100% AIA Nantes</p>
+									<p>
+										<h4>Extension du CHU de Saint Brieuc (22) </h4><br> Maitre d'ouvrage : Centre Hospitalier de Saint Brieuc<br> Surface : 5 500 m<sup>2</sup> Extension + 5 500 m<sup>2</sup> réhabilitation<br> Montant des Travaux : 22 M€ HT<br> Début des travaux : Avril 2018<br> Equipe de conception : 100%
+										AIA Nantes</p>
 									<div class="box alt">
 										<div class="row uniform 50%">
 											<div class="5u"><span class="image fit"><img src="images/CHU1.jpg" alt="" /></span></div>
 											<div class="5u"><span class="image fit"><img src="images/CHU2.jpg" alt="" /></span></div>
 										</div>
 									</div>
-									<p>Management et Coordination BIM (rchitecture, plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie, architecture d'intérieur, HQE ) et support Revit.<p/>
-							</div>
-						</section>
-					</article>
+									<p>Management et Coordination BIM (rchitecture, plomberie, ventilation, chauffage, électricité, aménagement extérieur,synthèse technique et architecturale, économie, architecture d'intérieur, HQE ) et support Revit.
+										<p/>
+				</div>
+				</section>
+		</article>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><script type=text/javascript> var name = "emilie.saverna" ; var domain = "gmail.com" ; document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>') ;</script></li>
-							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Mélodia</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li>
+					<script type=text/javascript>
+						var name = "emilie.saverna";
+						var domain = "gmail.com";
+						document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>');
+					</script>
+				</li>
+				<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Mélodia</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
