--- a/cv.html
+++ b/cv.html
@@ -5,52 +5,54 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>CV</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>CV</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Emilie Mélodia Saverna</a></h1>
-						<nav id="nav">
+<body>
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Emilie Mélodia Saverna</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Accueil</a></li>
-											<li><a href="cv.html">Curriculum</a></li>
-											<li><a href="projets.html">Projets</a></li>
-										</ul>
-									</div>
-								</li>
+								<li><a href="index.html">Accueil</a></li>
+								<li><a href="cv.html">Curriculum</a></li>
+								<li><a href="projets.html">Projets</a></li>
 							</ul>
-						</nav>
-					</header>
+						</div>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- Main -->
-<article id="main">
-<header>
-<h2>Historique</h2>
-<p>Experiences professionelles</p>
-<ul class="icons">
-<li><a href="doc/CV Emilie MELODIA-Saverna.pdf" class="button fit special" download="CV Emilie Mélodia-Saverna">Télécharger CV</a></li>
-</ul>
-</header>
-<section class="wrapper style5">
-<div class="inner">
-<em>Bientôt</em>
-<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec)</h2>
+		<!-- Main -->
+		<article id="main">
+			<header>
+				<h2>Historique</h2>
+				<p>Experiences professionelles</p>
+				<ul class="icons">
+					<li><a href="doc/CV Emilie MELODIA-Saverna.pdf" class="button fit special" download="CV Emilie Mélodia-Saverna">Télécharger CV</a></li>
+				</ul>
+			</header>
+			<section class="wrapper style5">
+				<div class="inner">
+					<em>Bientôt</em>
+					<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec)</h2>
 
 					<section id="three" class="wrapper style5 special">
 						<div class="inner">
@@ -63,136 +65,139 @@
 								<li class="icon fa fa-users">
 									<h3>NARUG (Nantes Atlantique Revit User Group)</h3>
 									<p>Membre d'une association qui regroupe des utilisateur.trice.s Revit ou Revit User Group (RUG), basé dans la région de Nantes.<br />
-									   <a href="https://www.facebook.com/groups/narug/">Facebook</a> - <a href="https://twitter.com/NATL_RUG">Twitter</a></p>
+										<a href="https://www.facebook.com/groups/narug/">Facebook</a> - <a href="https://twitter.com/NATL_RUG">Twitter</a></p>
 							</ul>
-							
+
 						</div>
 					</section>
 
-<em>De mars 2015 à décembre 2017</em>
-<h2><em>BIM Manageuse site de Nantes et Lorient - </em> <a href="http://www.a-i-a.fr/">AIA Life Designer</a> - Nantes (44)</h2>
-<p>Support Revit multi-métier (Architecture, Structure, MEP, VRD…), mise en place de formations pour les projeteurs et les chefs de projet.<br>
-Coordination des équipes multi métiers (architectes, structure, plomberie, électricité, économiste…) sur les projets BIM.<br>
-Mise en place de méthodologie de travail BIM avec des conventions BIM pour la conception et l’exécution.<br>
-Interventions "retour d'expérience" au JedisBIM de <a href="https://www.novabuild.fr">Novabuild</a> et chez <a href="https://www.atlancad.fr">Atlancad</a></p>
-<ul class="icons">
-<li class="icon fa-circle-o"> Revit</li>
-<li class="icon fa-circle-o"> Naviswork</li>
-<li class="icon fa-circle-o"> Tekla BIMsight</li>
-<li class="icon fa-circle-o"> Design Review</li>
-<li class="icon fa-circle-o"> Dynamo</li>
-<li class="icon fa-circle-o"> Office.</li>
-</ul>
-</br>
-<em>De novembre 2011 à février 2015 (3 ans et 6 mois)</em>
-<h2><em>Référente maquette numérique – </em> <a href="http://www.bouygues-batiment-grand-ouest.fr/">Bouygues Bâtiment Grand Ouest</a> - Nantes (44)</h2>
-<p>Réalisation de maquette numérique pour la synthèse habitat (reprise des plans des différents lot en maquette numérique, recherche de solution en cas de non-conformité) et vérification de la réglementation PMR et incendie.<br>
-Mise en place d’un guide d’utilisation Revit. Création d’un gabarit Revit et de familles pour le service conception en lien avec les autres services (méthodes, structure, fluides…).</p>
-<ul class="icons">
-<li class="icon fa-circle-o"> Revit</li>
-<li class="icon fa-circle-o"> Design Review</li>
-<li class="icon fa-circle-o"> Photoshop</li>
-<li class="icon fa-circle-o"> Sketchup</li>
-<li class="icon fa-circle-o"> Autocad</li>
-<li class="icon fa-circle-o"> Office.</li>
-</ul>
-</br>
-<em>2011 – (3 mois)</em>
-<h2><em>Chef de projet - </em> <a href="http://www.allianceconstruction.fr/">ALLIANCE CONSTRUCTION</a> - Nantes (44)</h2>
-<ul class="icons">
-<li class="icon fa-circle-o"> MIOA</li>
-<li class="icon fa-circle-o"> Photoshop</li>
-<li class="icon fa-circle-o"> Office.</li>
-</ul>
-</br>
-<em>2008 – 2011 (3 ans et 6 mois)</em>
-<h2><em>Coordinatrice de projet et dessinatrice – Agence d'architecture BOUET - Rennes (35)</em></h2>
-<p>Relevés de bâtiments existants.<br>
-Réalisation de plans, de l’esquisse au DOE (maisons individuelles; écoles; logements collectifs; EPHAD; bureaux; réfectoire…).<br>
-Réunions de chantier. Réalisation d’un outil de calcul en isolation thermique, formation des collaborateurs sur Sketchup et Artlantis.</p>
-<ul class="icons">
-<li class="icon fa-circle-o"> Archicad</li>
-<li class="icon fa-circle-o"> Photoshop</li>
-<li class="icon fa-circle-o"> Sketchup</li>
-<li class="icon fa-circle-o"> Artlantis</li>
-<li class="icon fa-circle-o"> Office.</li>
-</ul>
-</br>
-<em>2007 (1 ans)</em>
-<h2><em>Coordinatrice de projet et dessinatrice - </em> <a href="http://www.ateliervoisin.fr/architecture-environnement/">Atelier dʼArchitecture Environnementale Voisins et Associés</a> - Bayeux (14)</h2>
-<p>Concours. Relevés de bâtiments existants. Réalisation de plans et 3D, de l’esquisse au DCE (maisons individuelles, bureaux, musée…). Recherche de matériaux.</p>
-<ul class="icons">
-<li class="icon fa-circle-o"> Autocad</li>
-<li class="icon fa-circle-o"> Photoshop</li>
-<li class="icon fa-circle-o"> Illustrator</li>
-<li class="icon fa-circle-o"> Sketchup</li>
-<li class="icon fa-circle-o"> Office.</li>
-</ul>
-</br>
-<em>2005 – 2007 (1 ans et 6 mois)</em>
-<h2><em>Responsable des dessinateurs(trices) - FRANCK DʼORTANE - Grenoble (38)</em></h2>
-<p>Constructeur de maisons individuelles en ossature bois.<br>
-Réalisation de plans, de l’esquisse au DCE (maisons individuelles ; bureaux). Préparation et suivis de chantier.</p>
-<ul class="icons">
-<li class="icon fa-circle-o"> Softplan</li>
-<li class="icon fa-circle-o"> Photoshop</li>
-<li class="icon fa-circle-o"> Office</li>
-</ul>
-</br>
-<em>2003 – 2005 (1 ans et 6 mois)</em>
-<h2><em>Dessinatrice métreuse - </em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise - Château Gontier (53)</h2>
-<p>Chez MBC : Réalisation de plans, de l’esquisse au PC de maisons individuelles.<br>
-Chez Cruard : Réalisation des plans de charpente/ossature bois.<br>
-Mise en place d’une méthodologie de travail collaborative entre l’architecte et bureau d’étude sur le logiciel SEMA.</p>
-<ul class="icons">
-<li class="icon fa-circle-o"> SEMA</li>
-<li class="icon fa-circle-o"> Autocad</li>
-<li class="icon fa-circle-o"> Photoshop</li>
-<li class="icon fa-circle-o"> Office.</li>
-</ul>
-</br>
-<em>1998 à 2003</em>
-<h2><em>Stages dans différentes entreprises :</em></h2>
-<p>Cabinet d’architectes, bureau d’étude béton, service urbanisme de mairie et conseil général, groupement d’artisans.</p>
-</div>
-							</div>
-						</section>
-					</article>
-					
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Et maintenant ... ?</h2>
-								<p>Plus d'informations sur les differents projets auxquels j'ai pu participer.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="projets.html" class="button fit special">Projets</a></li>
-								<li><a href="index.html" class="button fit">retour</a></li>
-							</ul>
-						</div>
-					</section>
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><script type=text/javascript> var name = "emilie.saverna" ; var domain = "gmail.com" ; document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>') ;</script></li>
-							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Mélodia</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+					<em>De mars 2015 à décembre 2017</em>
+					<h2><em>BIM Manageuse site de Nantes et Lorient - </em> <a href="http://www.a-i-a.fr/">AIA Life Designer</a> - Nantes (44)</h2>
+					<p>Support Revit multi-métier (Architecture, Structure, MEP, VRD…), mise en place de formations pour les projeteurs et les chefs de projet.<br> Coordination des équipes multi métiers (architectes, structure, plomberie, électricité, économiste…) sur
+						les projets BIM.<br> Mise en place de méthodologie de travail BIM avec des conventions BIM pour la conception et l’exécution.<br> Interventions "retour d'expérience" au JedisBIM de <a href="https://www.novabuild.fr">Novabuild</a> et chez <a href="https://www.atlancad.fr">Atlancad</a></p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> Revit</li>
+						<li class="icon fa-circle-o"> Naviswork</li>
+						<li class="icon fa-circle-o"> Tekla BIMsight</li>
+						<li class="icon fa-circle-o"> Design Review</li>
+						<li class="icon fa-circle-o"> Dynamo</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
+					<em>De novembre 2011 à février 2015 (3 ans et 6 mois)</em>
+					<h2><em>Référente maquette numérique – </em> <a href="http://www.bouygues-batiment-grand-ouest.fr/">Bouygues Bâtiment Grand Ouest</a> - Nantes (44)</h2>
+					<p>Réalisation de maquette numérique pour la synthèse habitat (reprise des plans des différents lot en maquette numérique, recherche de solution en cas de non-conformité) et vérification de la réglementation PMR et incendie.<br> Mise en place d’un guide
+						d’utilisation Revit. Création d’un gabarit Revit et de familles pour le service conception en lien avec les autres services (méthodes, structure, fluides…).</p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> Revit</li>
+						<li class="icon fa-circle-o"> Design Review</li>
+						<li class="icon fa-circle-o"> Photoshop</li>
+						<li class="icon fa-circle-o"> Sketchup</li>
+						<li class="icon fa-circle-o"> Autocad</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
+					<em>2011 – (3 mois)</em>
+					<h2><em>Chef de projet - </em> <a href="http://www.allianceconstruction.fr/">ALLIANCE CONSTRUCTION</a> - Nantes (44)</h2>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> MIOA</li>
+						<li class="icon fa-circle-o"> Photoshop</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
+					<em>2008 – 2011 (3 ans et 6 mois)</em>
+					<h2><em>Coordinatrice de projet et dessinatrice – Agence d'architecture BOUET - Rennes (35)</em></h2>
+					<p>Relevés de bâtiments existants.<br> Réalisation de plans, de l’esquisse au DOE (maisons individuelles; écoles; logements collectifs; EPHAD; bureaux; réfectoire…).<br> Réunions de chantier. Réalisation d’un outil de calcul en isolation thermique,
+						formation des collaborateurs sur Sketchup et Artlantis.</p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> Archicad</li>
+						<li class="icon fa-circle-o"> Photoshop</li>
+						<li class="icon fa-circle-o"> Sketchup</li>
+						<li class="icon fa-circle-o"> Artlantis</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
+					<em>2007 (1 ans)</em>
+					<h2><em>Coordinatrice de projet et dessinatrice - </em> <a href="http://www.ateliervoisin.fr/architecture-environnement/">Atelier dʼArchitecture Environnementale Voisins et Associés</a> - Bayeux (14)</h2>
+					<p>Concours. Relevés de bâtiments existants. Réalisation de plans et 3D, de l’esquisse au DCE (maisons individuelles, bureaux, musée…). Recherche de matériaux.</p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> Autocad</li>
+						<li class="icon fa-circle-o"> Photoshop</li>
+						<li class="icon fa-circle-o"> Illustrator</li>
+						<li class="icon fa-circle-o"> Sketchup</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
+					<em>2005 – 2007 (1 ans et 6 mois)</em>
+					<h2><em>Responsable des dessinateurs(trices) - FRANCK DʼORTANE - Grenoble (38)</em></h2>
+					<p>Constructeur de maisons individuelles en ossature bois.<br> Réalisation de plans, de l’esquisse au DCE (maisons individuelles ; bureaux). Préparation et suivis de chantier.</p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> Softplan</li>
+						<li class="icon fa-circle-o"> Photoshop</li>
+						<li class="icon fa-circle-o"> Office</li>
+					</ul>
+					</br>
+					<em>2003 – 2005 (1 ans et 6 mois)</em>
+					<h2><em>Dessinatrice métreuse - </em> <a href="http://www.cruard-charpente.com/">CRUARD CHARPENTE</a> et <a href="https://www.mbc-maisonbois.com/">MAISON BOIS CRUARD</a> mi-temps dans chaque entreprise - Château Gontier (53)</h2>
+					<p>Chez MBC : Réalisation de plans, de l’esquisse au PC de maisons individuelles.<br> Chez Cruard : Réalisation des plans de charpente/ossature bois.<br> Mise en place d’une méthodologie de travail collaborative entre l’architecte et bureau d’étude
+						sur le logiciel SEMA.</p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> SEMA</li>
+						<li class="icon fa-circle-o"> Autocad</li>
+						<li class="icon fa-circle-o"> Photoshop</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
+					<em>1998 à 2003</em>
+					<h2><em>Stages dans différentes entreprises :</em></h2>
+					<p>Cabinet d’architectes, bureau d’étude béton, service urbanisme de mairie et conseil général, groupement d’artisans.</p>
+				</div>
+	</div>
+	</section>
+	</article>
 
-			</div>
+	<!-- CTA -->
+	<section id="cta" class="wrapper style4">
+		<div class="inner">
+			<header>
+				<h2>Et maintenant ... ?</h2>
+				<p>Plus d'informations sur les differents projets auxquels j'ai pu participer.</p>
+			</header>
+			<ul class="actions vertical">
+				<li><a href="projets.html" class="button fit special">Projets</a></li>
+				<li><a href="index.html" class="button fit">retour</a></li>
+			</ul>
+		</div>
+	</section>
+	<!-- Footer -->
+	<footer id="footer">
+		<ul class="icons">
+			<li>
+				<script type=text/javascript>
+					var name = "emilie.saverna";
+					var domain = "gmail.com";
+					document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>');
+				</script>
+			</li>
+			<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+			<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
+		</ul>
+		<ul class="copyright">
+			<li>&copy; Mélodia</li>
+			<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+		</ul>
+	</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-	</body>
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+</body>
+
 </html>
