--- a/index.html
+++ b/index.html
@@ -5,147 +5,159 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Emilie Mélodia Saverna</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="landing">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Emilie Mélodia Saverna</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Emilie Mélodia Saverna</a></h1>
-						<nav id="nav">
+<body class="landing">
+
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Emilie Mélodia Saverna</a></h1>
+			<nav id="nav">
+				<ul>
+					<li class="special">
+						<a href="#menu" class="menuToggle"><span>Menu</span></a>
+						<div id="menu">
 							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Accueil</a></li>
-											<li><a href="cv.html">Curriculum</a></li>
-											<li><a href="projets.html">Projets</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Emilie Mélodia Saverna</h2>
-							<p>Depuis 2003 dans différentes entreprises du bâtiment.<br />
-							Spécialiste BIM, formatrice, geek, photographe...<br />
-							<ul class="actions">
-								<li><a href="cv.html" class="button special">CV</a></li>
+								<li><a href="index.html">Accueil</a></li>
+								<li><a href="cv.html">Curriculum</a></li>
+								<li><a href="projets.html">Projets</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Plus d'informations</a>
-					</section>
+					</li>
+				</ul>
+			</nav>
+		</header>
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Je travaille depuis 2003 dans différentes entreprises du bâtiment</h2>
-								<p>bureaux d’étude, cabinets d’architectes, entreprise générale<br />
-								À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa fa-hand-spock-o major style1"><span class="label">Geek</span></span></li>
-								<li><span class="icon fa fa-users major style2"><span class="label">Work</span></span></li>
-								<li><span class="icon fa fa-coffee major style3"><span class="label">Coffee</span></span></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
-								<h2>Hôpital Princesse Grace de Monaco</h2>
-								<p>Coordinatrice BIM ingénierie et support Revit pour les phases de conception</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/aeroport.jpg" alt="" /></div><div class="content">
-								<h2>Extension de l'aéroport Blagnac de Toulouse </h2>
-								<p>BIM manageuse et support Revit pour les phases de conception et exécution</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/lycee.jpg" alt="" /></div><div class="content">
-								<h2>Lycée Nort sur Erdre (44)</h2>
-								<p>BIM manageuse et support Revit pour les phases de conception</p>
-							</div>
-						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Le travail n'est pas tout !</h2>
-								<p>L'experience professionnelle n'est pas la seule corde à mon arc.<br />
-								Mes loisirs, mes compétences autres, tout cela est à prendre en compte.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa fa-book">
-									<h3>Lecture</h3>
-									<p>Science-fiction, policier, romans classiques. Quoi de mieux qu'un bon livre avec un bon café ?</p>
-								</li>
-								<li class="icon fa fa-camera-retro">
-									<h3>Photographie</h3>
-									<p>Garder l'oeil ouvert, le nez au vent<br />
-									   La photo pour découvrir la ville et l'architecture.</p>
-							</ul>
-						</div>
-					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Et maintenant ... ?</h2>
-								<p>Plus d'informations sur mon CV ou sur les differents projets auxquels j'ai pu participer.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="cv.html" class="button fit special">CV</a></li>
-								<li><a href="projets.html" class="button fit">Projets</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><script type=text/javascript> var name = "emilie.saverna" ; var domain = "gmail.com" ; document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>') ;</script></li>
-							<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Mélodia</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-
+		<!-- Banner -->
+		<section id="banner">
+			<div class="inner">
+				<h2>Emilie Mélodia Saverna</h2>
+				<p>Depuis 2003 dans différentes entreprises du bâtiment.<br /> Spécialiste BIM, formatrice, geek, photographe...<br />
+					<ul class="actions">
+						<li><a href="cv.html" class="button special">CV</a></li>
+					</ul>
 			</div>
+			<a href="#one" class="more scrolly">Plus d'informations</a>
+		</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<!-- One -->
+		<section id="one" class="wrapper style1 special">
+			<div class="inner">
+				<header class="major">
+					<h2>Je travaille depuis 2003 dans différentes entreprises du bâtiment</h2>
+					<p>bureaux d’étude, cabinets d’architectes, entreprise générale<br /> À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse.</p>
+				</header>
+				<ul class="icons major">
+					<li><span class="icon fa fa-hand-spock-o major style1"><span class="label">Geek</span></span>
+					</li>
+					<li><span class="icon fa fa-users major style2"><span class="label">Work</span></span>
+					</li>
+					<li><span class="icon fa fa-coffee major style3"><span class="label">Coffee</span></span>
+					</li>
+				</ul>
+			</div>
+		</section>
 
-	</body>
+		<!-- Two -->
+		<section id="two" class="wrapper alt style2">
+			<section class="spotlight">
+				<div class="image"><img src="images/pic01.png" alt="" /></div>
+				<div class="content">
+					<h2>Hôpital Princesse Grace de Monaco</h2>
+					<p>Coordinatrice BIM ingénierie et support Revit pour les phases de conception</p>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/aeroport.jpg" alt="" /></div>
+				<div class="content">
+					<h2>Extension de l'aéroport Blagnac de Toulouse </h2>
+					<p>BIM manageuse et support Revit pour les phases de conception et exécution</p>
+				</div>
+			</section>
+			<section class="spotlight">
+				<div class="image"><img src="images/lycee.jpg" alt="" /></div>
+				<div class="content">
+					<h2>Lycée Nort sur Erdre (44)</h2>
+					<p>BIM manageuse et support Revit pour les phases de conception</p>
+				</div>
+			</section>
+		</section>
+
+		<!-- Three -->
+		<section id="three" class="wrapper style3 special">
+			<div class="inner">
+				<header class="major">
+					<h2>Le travail n'est pas tout !</h2>
+					<p>L'experience professionnelle n'est pas la seule corde à mon arc.<br /> Mes loisirs, mes compétences autres, tout cela est à prendre en compte.</p>
+				</header>
+				<ul class="features">
+					<li class="icon fa fa-book">
+						<h3>Lecture</h3>
+						<p>Science-fiction, policier, romans classiques. Quoi de mieux qu'un bon livre avec un bon café ?</p>
+					</li>
+					<li class="icon fa fa-camera-retro">
+						<h3>Photographie</h3>
+						<p>Garder l'oeil ouvert, le nez au vent<br /> La photo pour découvrir la ville et l'architecture.</p>
+				</ul>
+			</div>
+		</section>
+
+		<!-- CTA -->
+		<section id="cta" class="wrapper style4">
+			<div class="inner">
+				<header>
+					<h2>Et maintenant ... ?</h2>
+					<p>Plus d'informations sur mon CV ou sur les differents projets auxquels j'ai pu participer.</p>
+				</header>
+				<ul class="actions vertical">
+					<li><a href="cv.html" class="button fit special">CV</a></li>
+					<li><a href="projets.html" class="button fit">Projets</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<ul class="icons">
+				<li>
+					<script type=text/javascript>
+						var name = "emilie.saverna";
+						var domain = "gmail.com";
+						document.write('<a href="mailto:' + name + '@' + domain + '" class="icon fa-envelope-o"><span class="label">Mail</span></a>');
+					</script>
+				</li>
+				<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; Mélodia</li>
+				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+			</ul>
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
