Ajout de balises OpenGraph pour l'index

--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html xmlns:og="http://ogp.me/ns#">
 
 <head>
-	<title>Emilie Mélodia Saverna</title>
+	<title>CV</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<meta property="og:title" content="Émilie Mélodia Saverna : CV" />
+	<meta property="og:type" content="profile" />
+	<meta property="og:url" content="http://emilie.melodia.fr" />
+	<meta property="og:image" content="http://emilie.melodia.fr/images/aperçu.jpeg" />
+	<meta property="og:description" content="Je travaille depuis 2003 dans différentes entreprises du bâtiment, bureaux d’étude, cabinets d’architectes, entreprise générale.
+	À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse." />
+	<meta property="og:locale" content="fr_FR" />
 </head>
+
 
 <body class="landing">
 
