Modif du nom de l'aperçu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta property="og:image" content="http://emilie.melodia.fr/images/aperçu.jpeg" />
 	<meta property="og:description" content="Je travaille depuis 2003 dans différentes entreprises du bâtiment, bureaux d’étude, cabinets d’architectes, entreprise générale.
 	À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse." />
-	<meta property="og:locale" content="fr_FR" />
+	<meta property="og:locale" content="fr_fr" />
 </head>
 
 
