--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta property="og:title" content="Émilie Mélodia Saverna : CV" />
 	<meta property="og:type" content="profile" />
 	<meta property="og:url" content="http://emilie.melodia.fr" />
-	<meta property="og:image" content="images/apercu.jpeg" />
+	<meta property="og:image" content="http://emilie.melodia.fr/images/apercu.jpeg" />
 	<meta property="og:description" content="Je travaille depuis 2003 dans différentes entreprises du bâtiment, bureaux d’étude, cabinets d’architectes, entreprise générale.
 	À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse." />
 	<meta property="og:locale" content="fr_fr" />
