Mise à jour de cv.html

--- a/cv.html
+++ b/cv.html
@@ -14,13 +14,17 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	<meta name="twitter:card" content="summary" />
+	<meta name="twitter:site" content="@emilie_save" />
+	<meta name="twitter:creator" content="@fmelo" />
+	<meta name="twitter:image" content="images/twit_pic.jpg"
 	<meta property="og:title" content="Émilie Mélodia Saverna : CV" />
 	<meta property="og:type" content="profile" />
 	<meta property="og:url" content="http://emilie.melodia.fr" />
 	<meta property="og:image" content="http://emilie.melodia.fr/images/apercu.jpeg" />
 	<meta property="og:description" content="Je travaille depuis 2003 dans différentes entreprises du bâtiment, bureaux d’étude, cabinets d’architectes, entreprise générale.
 	À différents postes : dessinatrice, métreur, référente DAO, coordinatrice BIM, BIM manageuse." />
-	<meta property="og:locale" content="fr_FR" />
+	<meta property="og:locale" content="fr_fr" />
 </head>
 
 <body>
