Penser à fermer les balises ^^

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:site" content="@emilie_save" />
 	<meta name="twitter:creator" content="@fmelo" />
-	<meta name="twitter:image" content="images/twit_pic.jpg"
+	<meta name="twitter:image" content="images/twit_pic.jpg" />
 	<meta property="og:title" content="Émilie Mélodia Saverna : CV" />
 	<meta property="og:type" content="profile" />
 	<meta property="og:url" content="http://emilie.melodia.fr" />
