--- a/projets.html
+++ b/projets.html
@@ -113,7 +113,7 @@
 									<p/>
 									<!-- projets -->
 									<p>
-										<h4>Extension du CHU de Saint Brieuc (22) </h4><br> Maitre d'ouvrage : Centre Hospitalier de Saint Brieuc<br> Surface : 5 500 m<sup>2</sup> Extension + 5 500 m<sup>2</sup> réhabilitation<br> Montant des Travaux : 22 M€ HT<br> Début des travaux : Avril 2018<br> Equipe de conception : 100%
+										<h4>Extension du CH de Saint Brieuc (22) </h4><br> Maitre d'ouvrage : Centre Hospitalier de Saint Brieuc<br> Surface : 5 500 m<sup>2</sup> Extension + 5 500 m<sup>2</sup> réhabilitation<br> Montant des Travaux : 22 M€ HT<br> Début des travaux : Avril 2018<br> Equipe de conception : 100%
 										AIA Nantes</p>
 									<div class="box alt">
 										<div class="row uniform 50%">
