--- a/cv.html
+++ b/cv.html
@@ -60,11 +60,12 @@
 					<li><a href="doc/CV Emilie MELODIA-Saverna.pdf" class="button fit special" download="CV Emilie Mélodia-Saverna">Télécharger CV</a></li>
 				</ul>
 			</header>
+			<!--
 			<section class="wrapper style5">
 				<div class="inner">
 					<em>Bientôt</em>
 					<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec)</h2>
-
+			-->
 					<section id="three" class="wrapper style5 special">
 						<div class="inner">
 							<ul class="features">
@@ -81,6 +82,17 @@
 
 						</div>
 					</section>
+					<em>De octobre 2018 à juillet 2019</em>
+					<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec, CA)</h2>
+					<p>Projet du REM (réseau express métropolitain) de Montréal. Restructuration de la Gare Centrale (avec nuage de points de l’existant) et création des centres de maintenance - fin de ligne.<br> Support logiciel Revit, audit des modèles 3D multi métier, participation au plan d’exécution BIM</p>
+					<ul class="icons">
+						<li class="icon fa-circle-o"> Revit</li>
+						<li class="icon fa-circle-o"> Recap</li>
+						<li class="icon fa-circle-o"> BIM 360</li>
+						<li class="icon fa-circle-o"> Civil 3D</li>
+						<li class="icon fa-circle-o"> Office.</li>
+					</ul>
+					</br>
 
 					<em>De mars 2015 à décembre 2017</em>
 					<h2><em>BIM Manageuse site de Nantes et Lorient - </em> <a href="http://www.a-i-a.fr/">AIA Life Designer</a> - Nantes (44)</h2>
