--- a/cv.html
+++ b/cv.html
@@ -60,10 +60,10 @@
 					<li><a href="doc/CV Emilie MELODIA-Saverna.pdf" class="button fit special" download="CV Emilie Mélodia-Saverna">Télécharger CV</a></li>
 				</ul>
 			</header>
-			<!--
+			
 			<section class="wrapper style5">
 				<div class="inner">
-					<em>Bientôt</em>
+			<!--		<em>Bientôt</em>
 					<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec)</h2>
 			-->
 					<section id="three" class="wrapper style5 special">
@@ -84,7 +84,7 @@
 					</section>
 					<em>De octobre 2018 à juillet 2019</em>
 					<h2><em>Coordinatrice BIM - </em> <a href="http://provencherroy.ca/fr/">Provencher_Roy</a> - Montréal (Québec, CA)</h2>
-					<p>Projet du REM (réseau express métropolitain) de Montréal. Restructuration de la Gare Centrale (avec nuage de points de l’existant) et création des centres de maintenance - fin de ligne.<br> Support logiciel Revit, audit des modèles 3D multi métier, participation au plan d’exécution BIM</p>
+					<p>Projet du REM (réseau express métropolitain) de Montréal. Restructuration de la Gare Centrale (avec nuage de points de l’existant) et création des centres de maintenance - fin de ligne.<br> Support logiciel Revit, audit des modèles 3D multi métier, participation au plan d’exécution BIM</p>
 					<ul class="icons">
 						<li class="icon fa-circle-o"> Revit</li>
 						<li class="icon fa-circle-o"> Recap</li>
