--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 				</li>
 				<li><a href="https://twitter.com/emilie_save" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="http://linkedin.com/in/emiliemelodia" class="icon fa fa-linkedin-square"><span class="label">Linkedin</span></a></li>
+				<li><a href="https://www.instagram.com/mili_melos/" class="icon fa-instagram"><span class="label">Twitter</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Mélodia</li>
