--- a/cv.html
+++ b/cv.html
@@ -77,7 +77,7 @@
 								<li class="icon fa fa-users">
 									<h3>NARUG (Nantes Atlantique Revit User Group)</h3>
 									<p>Membre d'une association qui regroupe des utilisateur.trice.s Revit ou Revit User Group (RUG), basé dans la région de Nantes.<br />
-										<a href="https://www.facebook.com/groups/narug/">Facebook</a> - <a href="https://twitter.com/NATL_RUG">Twitter</a></p>
+										<a href="https://nantes-rug.fr/">NARUG</a> - <a href="https://twitter.com/NATL_RUG">Twitter</a></p>
 							</ul>
 
 						</div>
