--- a/cv.html
+++ b/cv.html
@@ -76,7 +76,7 @@
 								</li>
 								<li class="icon fa fa-users">
 									<h3>NARUG (Nantes Atlantique Revit User Group)</h3>
-									<p>Membre d'une association qui regroupe des utilisateur.trice.s Revit ou Revit User Group (RUG), basé dans la région de Nantes.<br />
+									<p>Membre d'une association qui regroupe des utilisateur.trice.s Revit ou BIM.<br />
 										<a href="https://nantes-rug.fr/">NARUG</a> - <a href="https://twitter.com/NATL_RUG">Twitter</a></p>
 							</ul>
 
